--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,20 +5,18 @@ services:
     image: asrall_postgres
     restart: always
     volumes:
-      - ./projet_db/scripts:/scripts
-      - ./projet_db/scripts:/docker-entrypoint-initdb.d
-      #- ./projet_db/database:/var/lib/postgresql/data
+      - ./projet_db/database:/var/lib/postgresql/
     hostname: db
     build:
       context: ./projet_db
     environment:
-      POSTGRES_PASSWORD: padmin
-      POSTGRES_USER: root
-      POSTGRES_DB: postfix
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_DB: ${DB_NAME}
     networks:
       - local
     ports:
-      - 5432:5432
+      - 5432:${DB_PORT}
 
   postfix:
     depends_on:
@@ -29,11 +27,11 @@ services:
       context: ./projet_postfix
     environment:
       POSTFIX_DOMAIN: exemple@toto.com:adresseIPTransimision;exemple@titi.com:adresse2IPTransmission
-      DB_IP: docker_db_1
-      DB_USER: root
-      DB_PASSWORD: padmin
-      DB_DB: postfix
-      DB_PORT: 5432
+      DB_IP: ${DB_IP}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_DB: ${DB_NAME}
+      DB_PORT: ${DB_PORT}
     volumes:
        - ./projet_postfix/etc/postfix:/etc/postfix
        - ./projet_postfix/scripts:/scripts
