--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,12 +5,12 @@ services:
     image: asrall_postgres
     restart: always
     volumes:
-      - ./projet_db/database:/var/lib/postgresql/
-      - ./projet_db/log/spool:/var/spool/
-      - ./projet_db/log/log:/var/log/
+      - ./db/database:/var/lib/postgresql/
+      - ./db/log/spool:/var/spool/
+      - ./db/log/log:/var/log/
     hostname: db
     build:
-      context: ./projet_db
+      context: ./db
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USER}
@@ -26,19 +26,17 @@ services:
     image: asrall_postfix
     hostname: postfix
     build:
-      context: ./projet_postfix
+      context: ./postfix
     environment:
       POSTFIX_DOMAIN: exemple@toto.com:adresseIPTransimision;exemple@titi.com:adresse2IPTransmission
       DB_IP: ${DB_IP}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
-      DB_DB: ${DB_NAME}
+      DB_NAME: ${DB_NAME}
       DB_PORT: ${DB_PORT}
     volumes:
-       - ./projet_postfix/etc/postfix:/etc/postfix
-       - ./projet_postfix/scripts:/scripts
-       - ./projet_postfix/log/spool:/var/spool/
-       - ./projet_postfix/log/log:/var/log/
+       - ./postfix/log/spool:/var/spool/
+       - ./postfix/log/log:/var/log/
     networks:
       - local
 networks:
