--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,15 +2,13 @@ version: '3.1'
 
 services:
   db:
-    image: asrall_postgres
+    image: postgres:14-bullseye
     restart: always
     volumes:
-      - ./db/database:/var/lib/postgresql/
-      - ./db/log/spool:/var/spool/
-      - ./db/log/log:/var/log/
+      - ./data/db/database:/var/lib/postgresql/
+      - ./data/db/spool:/var/spool/
+      - ./data/db/log:/var/log/
     hostname: db
-    build:
-      context: ./db
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USER}
@@ -27,6 +25,9 @@ services:
     hostname: postfix
     build:
       context: ./postfix
+#      args:
+#         - "https_proxy=http://webproxy.coe.int:8080"
+#         - "http_proxy=http://webproxy.coe.int:8080"
     environment:
       POSTFIX_DOMAIN: exemple@toto.com:adresseIPTransimision;exemple@titi.com:adresse2IPTransmission
       DB_IP: ${DB_IP}
@@ -35,10 +36,12 @@ services:
       DB_NAME: ${DB_NAME}
       DB_PORT: ${DB_PORT}
     volumes:
-       - ./postfix/log/spool:/var/spool/
-       - ./postfix/log/log:/var/log/
+       - ./data/postfix/spool:/var/spool/postfix
+       - ./data/postfix/log:/var/log/
     networks:
       - local
+    ports:
+      - 5000:5000
 networks:
     local:
       driver: bridge
