--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,32 +5,35 @@ services:
     image: postgres:14-bullseye
     restart: always
     volumes:
-      - ./data/db/database:/var/lib/postgresql/
-      - ./data/db/spool:/var/spool/
-      - ./data/db/log:/var/log/
+      - ./data/db/database/data:/var/lib/postgresql/data
+      - ./data/db/log:/var/log
     hostname: db
+    healthcheck:
+        test: ["CMD", "psql", "${DB_NAME}" , "-h", "localhost", "-p", "5432"]
+        interval: 30s
+        timeout: 10s
+        retries: 5
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_DB: ${DB_NAME}
     networks:
-      - local
-    ports:
-      - 5432:${DB_PORT}
+      - default
 
   postfix:
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     image: asrall_postfix
     hostname: postfix
     build:
       context: ./postfix
-#      args:
-#         - "https_proxy=http://webproxy.coe.int:8080"
-#         - "http_proxy=http://webproxy.coe.int:8080"
+      args:
+         - "https_proxy=http://webproxy.coe.int:8080"
+         - "http_proxy=http://webproxy.coe.int:8080"
     environment:
       POSTFIX_DOMAIN: exemple@toto.com:adresseIPTransimision;exemple@titi.com:adresse2IPTransmission
-      DB_IP: ${DB_IP}
+      DB_HOST: 'db'
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
@@ -39,9 +42,6 @@ services:
        - ./data/postfix/spool:/var/spool/postfix
        - ./data/postfix/log:/var/log/
     networks:
-      - local
+      - default
     ports:
       - 5000:5000
-networks:
-    local:
-      driver: bridge
