--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,9 +10,10 @@ services:
     hostname: db
     healthcheck:
         test: ["CMD", "psql", "${DB_NAME}" , "-h", "localhost", "-p", "5432"]
-        interval: 30s
+        start_period: 10s
+        interval: 5s
         timeout: 10s
-        retries: 5
+        retries: 10
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USER}
@@ -20,6 +21,13 @@ services:
     networks:
       - default
 
+  mailhog:
+    hostname: mailhog
+    image: mailhog/mailhog
+    networks:
+      - default
+    ports:
+      - 8025:8025
   postfix:
     depends_on:
       db:
@@ -28,11 +36,13 @@ services:
     hostname: postfix
     build:
       context: ./postfix
-      #args:
-      #   - "https_proxy=http://webproxy.coe.int:8080"
-      #   - "http_proxy=http://webproxy.coe.int:8080"
+      args:
+         - "https_proxy=http://webproxy.coe.int:8080"
+         - "http_proxy=http://webproxy.coe.int:8080"
     environment:
-      POSTFIX_DOMAIN: exemple@toto.com:adresseIPTransimision;exemple@titi.com:adresse2IPTransmission
+      MIO_METHOD: "policy_toto"
+      MAILNAME: "mio.test.net"
+      POSTFIX_DOMAIN: toto.com=[mailhog]:1025;titi.com=[mailhog]:1025;test.net=[mailhog]:1025
       DB_HOST: 'db'
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
@@ -45,3 +55,4 @@ services:
       - default
     ports:
       - 5000:5000
+      - 2525:25
