[EHN] Cleanup du fichier docker-compose + variables

--- a/docker/.env
+++ b/docker/.env
@@ -3,3 +3,5 @@ DB_USER=root
 DB_PASSWORD=padmin
 DB_NAME=postfix
 DB_PORT=5432
+HTTP_PROXY=
+POSTFIX_DOMAIN="toto.com=[mailhog]:1025;titi.com=[mailhog]:1025;test.net=[mailhog]:1025;*=[mailhog]:1025"
